# Shui

./: .gitignore  Cargo.toml  README.en.md  README.md  index.html  next.config.ts  package-bak.json  package.json  tsconfig.json
.github/workflows/: publish.yaml  updater.mjs
src/: App.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json  tauri.linux.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/icons/shui/: icon.iconset
src-tauri/src/: commands.rs  lib.rs  main.rs  panel.rs  timer.rs
src-tauri/src/core/: mod.rs
src-tauri/src/core/panel/: mod.rs
src-tauri/src/core/setup/: linux.rs  macos.rs  mod.rs  windows.rs
src-tauri/src/core/store/: settings.rs
src-tauri/src/core/util/: linux.rs  macos.rs  mod.rs  whitelist.rs  windows.rs
src-tauri/src/core/window/: linux.rs  linux_impl.rs  macos.rs  mod.rs  windows.rs
src-tauri/src/core/window/linux/: ext.rs  linux.rs  mod.rs  window_impl.rs
src-tauri/src/plugins/autostart/permissions/autogenerated/: reference.md
src-tauri/src/plugins/autostart/permissions/schemas/: schema.json
src-tauri/src/plugins/clipboard/permissions/schemas/: schema.json
src-tauri/src/plugins/locale/permissions/schemas/: schema.json
src-tauri/src/plugins/ocr/permissions/schemas/: schema.json
src-tauri/src/plugins/paste/permissions/schemas/: schema.json
src-tauri/src/plugins/window/permissions/schemas/: schema.json
src/app/: globals.css  layout.tsx  metadata.ts  page.tsx
src/app/reminder/: index.css  page.tsx
src/app/setting/: layout.tsx  page.tsx
src/app/setting/about/: page.tsx
src/app/setting/reminder/: page.tsx
src/app/setting/shortcut/: page.tsx
src/components/: app-sidebar.tsx  language-switcher.tsx
src/components/ui/: sidebar.tsx
src/hooks/: use-platform.ts  use-tray.ts  use-updater.ts
src/i18n/: config.ts  provider.tsx
src/i18n/messages/: en.json  zh.json
src/lib/: constants.ts
src/utils/: notification.ts  store.ts  updater.ts
